--- a/bftpd.conf
+++ b/bftpd.conf
@@ -1,4 +1,4 @@
-#Configuration file for bftpd.
++#Configuration file for bftpd.
 #The given values are only examples, modify this file for your own needs.
 
 global{
@@ -6,7 +6,7 @@ global{
   #If set to yes, access is denied without giving a reason.
   #If set to anything else, access is denied giving the content of this
   #variable as a reason.
-  DENY_LOGIN="no" 
+  DENY_LOGIN="no"
 
   #The port number where the daemon should listen (only for daemon mode)
   PORT="21"
@@ -194,7 +194,7 @@ global{
   #HOMEDIR and its subdirectories. DON'T disable this globally if you don't
   #want to have a security hole!
   DO_CHROOT="yes"
-  
+
   #Enable this to log each login to wtmp.
   LOG_WTMP="yes"
 
@@ -210,7 +210,7 @@ global{
   # the LAN IP your PC had. It is recommended you leave this option
   # commented out unless you have a special setup.
   #OVERRIDE_IP="127.0.0.1"
-  
+
 
   #Path to the ftpusers file. It can contain user names that are denied.
   #If it does not exist, every user can log in. If you don't want this,
@@ -226,7 +226,7 @@ global{
   #ALLOWCOMMAND_DELE="no"
   #Of course, you can disable it for specific users by writing the appropiate
   #lines into the user structures.
-  ALLOWCOMMAND_DELE="no"
+  ALLOWCOMMAND_DELE="yes"
   ALLOWCOMMAND_STOR="yes"
   ALLOWCOMMAND_SITE="no"
 
@@ -310,9 +310,3 @@ user anonymous {
   #If the client wants anonymous, ftp is taken instead.
   ALIAS="ftp"
 }
-
-user root {
-  DENY_LOGIN="Root login not allowed."
-}
-
-
