--- a/bftpd.conf
+++ b/bftpd.conf
@@ -1,4 +1,4 @@
-+#Configuration file for bftpd.
+#Configuration file for bftpd.
 #The given values are only examples, modify this file for your own needs.
 
 global{
